--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -2,13 +2,78 @@
     height: 100vh;
 
     &__container {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        position: relative;
+    }
+
+    &__image {
+        width: 40vw;
+        height: 100vh;
+        margin-top: 30px;
+        z-index: 0;
+
+        .image {
+            width: 100%;
+            height: 100%;
+            background-image: url('../../assets/Home-Hero-Image.jpg');
+            background-repeat: no-repeat;
+            background-size: contain;
+            position: absolute;
+            top: 0;
+            left: -25%;
+        }
+    }
+
+    &__content {
         height: 100%;
         display: flex;
-        justify-content: flex-end;
+        flex-direction: column;
+        margin-top: 30px;
+        z-index: 1;
     }
 
     &__nav {
         display: flex;
         justify-content: flex-end;
+
+        &--first {
+            margin-bottom: 20px;
+            .nav__element {
+                padding: 10px 10px;
+                font-size: 14px;
+
+                &:first-child {
+                    margin-right: 6px;
+                }
+
+                &:hover {
+                    border: 1px solid $color-yellow;
+                }
+
+                .nav__link {
+                    color: $color-grey;
+                    outline: none;
+                }
+            }
+        }
+
+        &--second {
+            .nav__element {
+                padding: 10px 20px;
+                font-size: 18px;
+
+                &:hover {
+                    border: 1px solid $color-darkgrey;
+                }
+
+                .nav__link {
+                    color: $color-darkgrey;
+                    outline: none;
+                }
+            }
+        }
     }
 }
