Added main section (buttons, section-header) to HomeHeader.js

--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -16,7 +16,7 @@
         z-index: 0;
 
         .image {
-            width: 100%;
+            width: 70%;
             height: 100%;
             background-image: url('../../assets/Home-Hero-Image.jpg');
             background-repeat: no-repeat;
@@ -38,6 +38,7 @@
     &__nav {
         display: flex;
         justify-content: flex-end;
+        margin-bottom: 200px;
 
         &--first {
             margin-bottom: 20px;
@@ -75,5 +76,30 @@
                 }
             }
         }
+    }
+
+    .section__header {
+        text-align: center;
+
+        h1 {
+            font-size: 36px;
+            color: $color-darkgrey;
+            line-height: 1.5;
+        }
+
+        .section__decoration {
+            width: 100%;
+            height: 50px;
+            background-image: url('../../assets/Decoration.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+            margin-top: 10px;
+        }
+    }
+
+    &__buttons {
+        margin-top: 60px;
+        display: flex;
+        justify-content: center;
     }
 }
