--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -22,7 +22,7 @@
             background-repeat: no-repeat;
             background-size: contain;
             position: absolute;
-            top: 0;
+            top: 0%;
             left: -25%;
         }
     }
