--- a/src/scss/elements/_homethreecolumns.scss
+++ b/src/scss/elements/_homethreecolumns.scss
@@ -16,12 +16,14 @@
         padding: 0 30px;
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         text-align: center;
 
         h1 {
-            font-size: 80px;
+            font-size: 90px;
             font-weight: 300;
-            color: $color-darkgrey;
+            color: $color-brown;
         }
 
         span {
