Added HomeAboutUs section, HTML & SCSS

--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -3,6 +3,7 @@
 
     &__container {
         width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -12,12 +13,11 @@
     &__image {
         width: 40vw;
         height: 100vh;
-        margin-top: 30px;
         z-index: 0;
         overflow: hidden;
 
         .image {
-            width: 70%;
+            width: 100%;
             height: 100%;
             background-image: url('../../assets/Home-Hero-Image.jpg');
             background-repeat: no-repeat;
