--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import './elements/base';
 @import './elements/buttons';
 @import './elements/header';
+@import './elements/home-about-us';
 @import './elements/home-simple-steps';
 @import './elements/homethreecolumns';
 @import './elements/section-decoration';
