--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,5 +11,6 @@
 @import './elements/header';
 @import './elements/home-about-us';
 @import './elements/home-simple-steps';
+@import './elements/home-who-we-help';
 @import './elements/homethreecolumns';
 @import './elements/section-decoration';
