--- a/src/scss/elements/_home-simple-steps.scss
+++ b/src/scss/elements/_home-simple-steps.scss
@@ -1,7 +1,5 @@
 .simplesteps {
     margin-top: 40px;
-    &__container {
-    }
 
     &__button {
         width: 100%;
@@ -25,17 +23,13 @@
     }
 
     &__content {
-        // max-width: 100%;
-        // display: flex;
-        // flex-direction: column;
-        margin: 10px 70px;
+        padding: 20px 80px;
         text-align: center;
 
         .content__image {
-            width: 83px;
-            // max-width: 100%;
-            height: 83px;
-            // height: auto;
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 10px;
         }
 
         h3 {
@@ -46,6 +40,7 @@
 
         hr {
             width: 50%;
+            border: 1px solid #707070;
         }
 
         p {
