--- a/src/scss/elements/_homethreecolumns.scss
+++ b/src/scss/elements/_homethreecolumns.scss
@@ -35,6 +35,7 @@
             font-size: 14px;
             margin-top: 25px;
             line-height: 1.5;
+            font-family: $font-alt;
         }
     }
 }
