--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import './elements/buttons';
 @import './elements/header';
 @import './elements/home-about-us';
+@import './elements/home-contact';
 @import './elements/home-simple-steps';
 @import './elements/home-who-we-help';
 @import './elements/homethreecolumns';
