--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -3,3 +3,5 @@ $color-brown: #5E5322;
 $color-yellow: #FAD648;
 $color-grey: #737373;
 $color-darkgrey: #3C3C3C;
+$color-shade-first: #707070;
+$color-shade-second: #3C3C3C26;
