Added pagination to HomeWhoWeHelp section & styles SCSS

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import './elements/header';
 @import './elements/home-about-us';
 @import './elements/home-contact';
+@import './elements/home-footer';
 @import './elements/home-simple-steps';
 @import './elements/home-who-we-help';
 @import './elements/homethreecolumns';
