--- a/src/scss/elements/_home-contact.scss
+++ b/src/scss/elements/_home-contact.scss
@@ -6,7 +6,6 @@
 
     &::before {
         content: '';
-        display: block;
         position: absolute;
         left: 0;
         top: 0;
@@ -24,6 +23,7 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        flex-direction: column;
     }
 
     &__form {
@@ -34,7 +34,7 @@
         align-items: center;
 
         form {
-            padding-top: 20px;
+            padding-top: 3rem;
 
             label {
                 font-size: 1rem;
@@ -62,6 +62,7 @@
         }
 
         .form__textarea {
+            margin-top: 3rem;
             textarea {
                 border: none;
                 border-bottom: 1px solid $color-shade-first;
