--- a/src/scss/elements/_home-who-we-help.scss
+++ b/src/scss/elements/_home-who-we-help.scss
@@ -45,38 +45,66 @@
     }
 
     &__organizations {
-        margin-top: 30px;
+        margin-top: 35px;
+
+        hr:nth-of-type(3) {
+            display: none;
+        }
 
         .organizations__content {
             display: flex;
             flex-direction: row;
+            justify-content: space-between;
+            font-family: $font-alt;
+            margin: 30px 0;
+        }
+
+        .organizations__name {
+            font-weight: 300;
+            h3 {
+                font-size: 26px;
+            }
+
+            p {
+                font-size: 18px;
+
+            }
+        }
+
+        .organizations__resources {
+            align-self: center;
+            p {
+                font-size: 18px;
+            }
         }
     }
 
     &__btnpages {
-        margin-top: 30px;
-        display: flex;
-        justify-content: center;
+        margin-top: 40px;
 
-        .pagenumbers {
-            list-style: none;
+        .pagination {
             display: flex;
-        }
+            flex-direction: row;
+            justify-content: center;
 
-        .btn__page {
-            width: 40px;
-            font-size: 18px;
-            padding: 10px 5px;
-            margin: 0px 6px;
-            border: none;
-            background: white;
+            .page-item {
+                margin: 10px;
 
-            &:hover {
-                border: 1px solid $color-darkgrey;
-            }
+                .page-button {
+                    border: none;
+                    background-color: transparent;
+                    font-size: 18px;
+                    color: $color-darkgrey;
+                    padding: 10px 10px;
 
-            &:focus {
-                border: 1px solid $color-darkgrey;
+                    &:hover {
+                        border: 1px solid $color-shade-first;
+                    }
+
+                    &:focus {
+                        border: 1px solid $color-shade-first;
+                    }
+                }
             }
         }
     }
