--- a/src/scss/elements/_home-contact.scss
+++ b/src/scss/elements/_home-contact.scss
@@ -1,6 +1,6 @@
 .contact {
     width: 100%;
-    height: 100vh;
+    // height: 100vh;
     position: relative;
     overflow: hidden;
 
@@ -19,10 +19,11 @@
     }
 
     &__container {
+        width: 100%;
         height: 100%;
         display: flex;
         justify-content: flex-end;
-        align-items: center;
+        align-items: flex-end;
         flex-direction: column;
     }
 
@@ -58,12 +59,24 @@
         .form__inputs {
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
+
+            .form__input {
+                display: flex;
+                flex-direction: column;
+
+                &:first-child {
+                    margin-right: 1rem;
+                }
+            }
         }
 
         .form__textarea {
             margin-top: 3rem;
+            display: flex;
+            flex-direction: column;
+
             textarea {
+                font-size: 1.125rem;
                 border: none;
                 border-bottom: 1px solid $color-shade-first;
                 width: 33rem;
@@ -71,7 +84,6 @@
                 margin: 0.75rem 0;
                 background-color: transparent;
             }
-
         }
 
         .btn__contact {
@@ -84,5 +96,17 @@
                 height: 3rem;
             }
         }
+    }
+
+    .error-message {
+        color: red;
+    }
+
+    .success-message {
+        color: green;
+        font-size: 1.2rem;
+        font-weight: 600;
+        margin-top: 2rem;
+        margin-bottom: 0.8rem;
     }
 }
