--- a/src/scss/elements/_home-footer.scss
+++ b/src/scss/elements/_home-footer.scss
@@ -1,5 +1,6 @@
 .footer {
-    width: 50%;
+    width: 60%;
+    margin: 16rem 0 1.25rem 50%;
     display: flex;
     justify-content: space-around;
 
@@ -13,6 +14,10 @@
         img {
             width: 30px;
             height: 30px;
+
+            &:first-of-type {
+                margin-right: 1rem;
+            }
         }
     }
 }
