Added login page HTML & SCSS

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,4 +15,5 @@
 @import './elements/home-simple-steps';
 @import './elements/home-who-we-help';
 @import './elements/homethreecolumns';
+@import './elements/login';
 @import './elements/section-decoration';
