Added register page HTML & SCSS

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,4 +16,5 @@
 @import './elements/home-who-we-help';
 @import './elements/homethreecolumns';
 @import './elements/login';
+@import './elements/register';
 @import './elements/section-decoration';
