--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,5 +16,6 @@
 @import './elements/home-who-we-help';
 @import './elements/homethreecolumns';
 @import './elements/login';
+@import './elements/logout';
 @import './elements/register';
 @import './elements/section-decoration';
