Added validation to login component & changed width to ul elements in Home section

--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -42,6 +42,7 @@
         margin-bottom: 200px;
 
         &--first {
+            height: 35px;
             margin-bottom: 20px;
             .nav__element {
                 padding: 10px 20px;
@@ -69,6 +70,7 @@
         }
 
         &--second {
+            height: 39px;
             .nav__element {
                 padding: 10px 20px;
                 font-size: 18px;
