--- a/src/scss/elements/_home-who-we-help.scss
+++ b/src/scss/elements/_home-who-we-help.scss
@@ -10,6 +10,7 @@
     }
 
     &__buttons {
+        height: 120px;
         padding-top: 40px;
         display: flex;
         justify-content: center;
@@ -83,6 +84,7 @@
         margin-top: 40px;
 
         .pagination {
+            height: 61px;
             display: flex;
             flex-direction: row;
             justify-content: center;
