Added border white to nav elements in header.scss

--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -48,6 +48,7 @@
                 padding: 10px 20px;
                 font-size: 14px;
                 margin: 0px 10px;
+                border: 1px solid white;
 
                 &:last-child {
                     margin-right: 0px;
@@ -75,6 +76,7 @@
                 padding: 10px 20px;
                 font-size: 18px;
                 margin: 0px 10px;
+                border: 1px solid white;
 
                 &:last-child {
                     margin-right: 0px;
