--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import './elements/home-about-us';
 @import './elements/home-contact';
 @import './elements/home-footer';
+@import './elements/home-header-logged-in';
 @import './elements/home-simple-steps';
 @import './elements/home-who-we-help';
 @import './elements/homethreecolumns';
