--- a/src/scss/elements/_home-who-we-help.scss
+++ b/src/scss/elements/_home-who-we-help.scss
@@ -16,7 +16,7 @@
         justify-content: center;
         align-items: center;
 
-        .btn {
+        button {
             width: 230px;
             font-size: 24px;
             font-weight: 400;
@@ -25,14 +25,10 @@
             padding: 10px 30px;
             margin: 0 20px;
             background: white;
+        }
 
-            &:hover {
-                border: 1px solid $color-darkgrey;
-            }
-
-            &:focus {
-                border: 1px solid $color-darkgrey;
-            }
+        .active {
+            border: 1px solid $color-shade-first;
         }
     }
 
